# guacalib

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEREVIEW.md  Makefile  PLAN.md  PROMPT.md  README.md  RULES.md  TODO.md  configuring-guacamole.txt  create_guacamole_user.py  db_config.ini.example  debug_permissions.py  gc_manager.py  gcmanager.py  gcmylib.py  guacalib.ini.example  pyproject.toml  requirements.txt  test_gcmanager.bats
doc/: conngroup_modify_addconn_rmconn.md  conngroup_permissions_plan.md  conngroup_permit_feature.md  docstrings_plan.md  ids_feature_spec.md  path_feature_spec.md  type_hints_plan.md  usergroup_ids_feature_spec.md
docs/: guacalib.html  index.html  search.js
guacalib/: __init__.py  cli.py  cli_handle_conn.py  cli_handle_conngroup.py  cli_handle_dump.py  cli_handle_group.py  cli_handle_user.py  cli_handle_usergroup.py  connections_repo.py  conngroups_repo.py  db.py  db_connection_parameters.py  db_user_parameters.py  db_utils.py  entities.py  exceptions.py  logging_config.py  permissions_repo.py  reporting_repo.py  ssh_tunnel.py  usergroups_repo.py  users_repo.py  version.py
plan/: type_hints_plan.md
plans/: conngroup_modify_addconn_rmconn.md  ids_feature_spec.md  logging_plan.md  modular_phase11.md  modular_plan.md  modular_plan_revision4_summary.md  modular_plan_revision5_summary.md  phase4_repository_analysis.md
scripts/: guacaman
tests/: cleanup_test_entries.sh  run_tests.bats  run_tests.sh  run_tests_with_summary.sh  setup.bats  setup_teardown.bash  teardown.bats  test_connection.bats  test_connection_modify.bats  (+14 more)
(+15 files in other folders)
