[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "guacalib"
version = "0.1"
description = "Guacamole management library and CLI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name="Your Name", email="your@email.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
guacaman = "guacalib.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
